--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,4 +17,24 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
     }
+
+
+
+}
+/* animation dyal l contact */
+    @layer utilities {
+  @keyframes fadeInUp {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .animate-fadeInUp {
+    animation: fadeInUp 0.8s ease-out both;
+  }
 }
